2005-09-29  Richard Hult  <richard@imendio.com>

	* Makefile.am: Remove stray space.

	* configure.in:
	* src/dh-base.c: (base_init),
	(dh_base_get_window_on_current_workspace): Use libwnck to track
	windows, since we can't differentiate between a minimized and
	on-another-workspace window otherwise.

	* src/dh-search.c (dh_search_new): Try without the search label
	for a bit.

2005-09-29  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (is_window_on_current_workspace),
	(dh_base_get_window_on_current_workspace): New function, returns a
	window if there is one on the current workspace.

	* src/dh-main.c: (message_received_cb), (main): Change to always
	create a window if there isn't one on the current workspace,
	otherwise use one of the available.
	
	* src/dh-window.c: (window_activate_new), (window_activate_close),
	* ui/window.ui: Add support for creating and closing windows,
	based on patch from Nirmal Kumar, bug #144516.

2005-09-28  Richard Hult  <richard@imendio.com>

	* src/dh-marshal.list:
	* src/dh-html.c: (html_class_init, html_init),
	(html_open_uri_cb): Add open-uri signal that is called before
	opening a location.
	
	* src/dh-search.c: (search_selection_changed_cb),
	(search_tree_button_press_cb): Don't emit link-selected twice when
	clicking in the tree.

	* ui/window.ui:
	* src/dh-window.c: Use the open-uri signal to update the book tree
	selection before loading the html, makes things feel
	snappier. Don't update the book tree selection when clicking it.
	- Add menu items for switching between the search and content
	tabs, bug #142054.

	Also update copyright and clean up some old cruft.

2005-09-28  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_location_changed_cb): Update the book
	tree here...
	(window_open_url): ...instead of here.

	* src/dh-book-tree.c (dh_book_tree_show_uri): Bring back to life,
	fix finding the node and expand the path.
	(book_tree_find_uri_foreach): Add as helper to the above. Fixes