@@ -1,3 +1,8 @@
+2005-09-30  Richard Hult  <richard@imendio.com>
+
+	* src/dh-window.c:
+	* ui/window.ui: Remove Quit menu item.
+
 2005-09-29  Richard Hult  <richard@imendio.com>
 
 	* Makefile.am: Remove stray space.
